{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 2649,
  "lineage": "15405f9c-d66f-ec59-bfee-e8ec69bcbe25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:internet-gateway/igw-08d05a546200e6bd0",
            "id": "igw-08d05a546200e6bd0",
            "owner_id": "815867481426",
            "tags": {
              "Name": "my-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "my-vpc-internet-gateway"
            },
            "vpc_id": "vpc-0e4f6b40cd6aaff0a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:route-table/rtb-0d0fc4eeb7d4d5b5f",
            "id": "rtb-0d0fc4eeb7d4d5b5f",
            "owner_id": "815867481426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d05a546200e6bd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4f6b40cd6aaff0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042ae7bae79dc062f",
            "route_table_id": "rtb-0d0fc4eeb7d4d5b5f",
            "subnet_id": "subnet-0cdb6a7cb14c06cca"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dcf09a2138f3c55",
            "route_table_id": "rtb-0d0fc4eeb7d4d5b5f",
            "subnet_id": "subnet-0176ecf9a73291fa6"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:security-group/sg-0038b9c65e92510f5",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0038b9c65e92510f5",
            "ingress": [],
            "name": "ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "815867481426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4f6b40cd6aaff0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:subnet/subnet-0cdb6a7cb14c06cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdb6a7cb14c06cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815867481426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MySubnet1"
            },
            "tags_all": {
              "Name": "MySubnet1"
            },
            "vpc_id": "vpc-0e4f6b40cd6aaff0a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:subnet/subnet-0176ecf9a73291fa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0176ecf9a73291fa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815867481426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MySubnet2"
            },
            "tags_all": {
              "Name": "MySubnet2"
            },
            "vpc_id": "vpc-0e4f6b40cd6aaff0a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815867481426:vpc/vpc-0e4f6b40cd6aaff0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-078b5c020b70844cd",
            "default_route_table_id": "rtb-0d2cd024403f96937",
            "default_security_group_id": "sg-066c0a7c2bcfc4cde",
            "dhcp_options_id": "dopt-048343fc4fbf7f352",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4f6b40cd6aaff0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2cd024403f96937",
            "owner_id": "815867481426",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}